src/objects/Certification__c.object
<CustomObject>
    <fields>
        <fullName>Business_Unit_Id__c</fullName>
        <label>Business Unit Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification_Agency__c</fullName>
        <label>Certification Agency</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Certification_Copy_Uploaded__c</fullName>
        <label>Certification Copy Uploaded</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Certification_File_Id__c</fullName>
        <label>Certification File Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification_Id__c</fullName>
        <label>Certification Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification_Number__c</fullName>
        <label>Certification Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification_Type__c</fullName>
        <label>Certification Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Id</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Certifications</relationshipLabel>
        <relationshipName>Certifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Time_Employee_Cert_Holder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Full Time Employee Cert Holder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organization_Id__c</fullName>
        <label>Organization Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Certification_Holder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owner Certification Holder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State_Incorporated</valueSetName>
        </valueSet>
    </fields>
    <label>Certification</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Certification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Certifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Effective_Date_Must_Be_Before_Expiry</fullName>
        <active>true</active>
        <description>This validation rule will check that the Effective Date is set to be before Expiry Date.</description>
        <errorConditionFormula>AND( 
NOT(ISBLANK( Effective_Date__c )), 
NOT(ISBLANK( Expiry_Date__c )), 
Effective_Date__c &gt; Expiry_Date__c 
)</errorConditionFormula>
        <errorDisplayField>Effective_Date__c</errorDisplayField>
        <errorMessage>The Effective Date must be before the Expiry Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Expiration_Date_Must_Be_In_Future</fullName>
        <active>true</active>
        <description>This validation rule will ensure that the Expiration Date is set in the future.</description>
        <errorConditionFormula>AND(
 NOT(ISBLANK(Expiry_Date__c)),
 Expiry_Date__c &lt; TODAY ()
)</errorConditionFormula>
        <errorDisplayField>Expiry_Date__c</errorDisplayField>
        <errorMessage>You must set an expiration date in the future.</errorMessage>
    </validationRules>
</CustomObject>